--- a/SatelliteBank/UI/Xib/ChartCell.xib
+++ b/SatelliteBank/UI/Xib/ChartCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChartCell" rowHeight="311" id="KGk-i7-Jjw" customClass="ChartCell" customModule="SatelliteBank" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="311"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChartCell" rowHeight="403" id="KGk-i7-Jjw" customClass="ChartCell" customModule="SatelliteBank" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="403"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="311"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="403"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Irq-1r-9bt">
-                        <rect key="frame" x="16" y="16" width="288" height="279"/>
+                        <rect key="frame" x="16" y="16" width="288" height="371"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Загруженность и посещаемость" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YjX-ZX-qTV">
                                 <rect key="frame" x="0.0" y="0.0" width="288" height="20.333333333333332"/>
@@ -27,17 +27,17 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="evV-g7-Vp7">
-                                <rect key="frame" x="0.0" y="36.333333333333329" width="288" height="130.66666666666669"/>
+                                <rect key="frame" x="0.0" y="36.333333333333336" width="288" height="72.333333333333314"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_green" translatesAutoresizingMaskIntoConstraints="NO" id="gCd-3a-QMv">
-                                        <rect key="frame" x="0.0" y="43.333333333333343" width="44" height="44"/>
+                                        <rect key="frame" x="0.0" y="14.333333333333336" width="44" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="44" id="PDk-Qs-Xrl"/>
                                             <constraint firstAttribute="width" secondItem="gCd-3a-QMv" secondAttribute="height" id="wrG-uK-5Rb"/>
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="wTe-aj-Vai">
-                                        <rect key="frame" x="52" y="44.333333333333343" width="236" height="42"/>
+                                        <rect key="frame" x="52" y="15.333333333333336" width="236" height="42"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Нет очереди" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="07k-uQ-6Mn">
                                                 <rect key="frame" x="0.0" y="0.0" width="236" height="17"/>
@@ -54,8 +54,16 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OP3-Bz-aSQ" customClass="FreeOfficeButton" customModule="SatelliteBank" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="124.66666666666664" width="288" height="34.333333333333329"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Найти свободный офис рядом"/>
+                                <connections>
+                                    <action selector="showFreeOffice:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="FVQ-Cf-pfe"/>
+                                </connections>
+                            </button>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="QdR-Dq-coH">
-                                <rect key="frame" x="0.0" y="183" width="288" height="30"/>
+                                <rect key="frame" x="0.0" y="175" width="288" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cTk-J3-hFP">
                                         <rect key="frame" x="0.0" y="0.0" width="37.666666666666664" height="30"/>
@@ -130,8 +138,11 @@
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZjP-NZ-vZI" customClass="BarChartView" customModule="DGCharts">
-                                <rect key="frame" x="0.0" y="229" width="288" height="50"/>
+                                <rect key="frame" x="0.0" y="221" width="288" height="150"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="GfU-2G-obJ"/>
+                                </constraints>
                             </view>
                         </subviews>
                     </stackView>
@@ -145,6 +156,7 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="chartView" destination="ZjP-NZ-vZI" id="UwH-nF-T92"/>
+                <outlet property="freeOfficeButton" destination="OP3-Bz-aSQ" id="Y5J-24-CaC"/>
                 <outlet property="loadImageView" destination="gCd-3a-QMv" id="j4a-gT-1Qf"/>
                 <outlet property="loadLabel" destination="07k-uQ-6Mn" id="v2C-6d-uBm"/>
                 <outlet property="waitLabel" destination="UBY-EF-RyW" id="IbR-Jj-x2F"/>
@@ -156,7 +168,7 @@
                 <outletCollection property="dayButtons" destination="c86-nW-Kaj" collectionClass="NSMutableArray" id="gDf-du-z0B"/>
                 <outletCollection property="dayButtons" destination="SmF-Cq-3Gu" collectionClass="NSMutableArray" id="abE-Tz-P8c"/>
             </connections>
-            <point key="canvasLocation" x="129.7709923664122" y="102.46478873239437"/>
+            <point key="canvasLocation" x="129.7709923664122" y="134.85915492957747"/>
         </tableViewCell>
     </objects>
     <resources>
